apps/tomcat3/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat3-stable
  namespace: production
  labels:
    app: tomcat3
spec:
  selector:
    app: tomcat3
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: jmx
      port: 9404
      targetPort: 9404
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat3-canary
  namespace: production
  labels:
    app: tomcat3
spec:
  selector:
    app: tomcat3
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: jmx
      port: 9404
      targetPort: 9404
