apps/tomcat3/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat3
  namespace: production
spec:
  ingressClassName: nginx
  rules:
    - host: tomcat3.devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tomcat3-stable
                port:
                  number: 8080
